fixed footerdesktop spacing issue

--- a/src/styles/FooterDesktop.css
+++ b/src/styles/FooterDesktop.css
@@ -51,6 +51,10 @@
         justify-content: space-between;
     }
 
+    .footCard.company{
+        justify-content: start;
+    }
+
     .blueBar{
         height: 3.5rem;
     }
